# rust_data_voyager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: LICENSE.md  TODO.md
Datasets/: Table 2.4.4U. Price Indexes for Personal Consumption Expenditures by Type of Products.csv  Table 2.6. Personal Income and Its Disposition, Monthly.csv  iris_utf8.csv
Datasets/Personal Consumption Expenditures Price Index/: Contents.csv  Table 1.csv  Table 2.csv  Table 3.csv  Table 4.csv  Table 6.csv  Table 7.csv
Datasets/arrow-files/: organization-100.csv.arrow  output.arrow
Datasets/csv-files/: Table 2.4.4U. Price Indexes for Personal Consumption Expenditures by Type of Product.csv  Table 2.4.5U. Personal Consumption Expenditures by Type of Product.csv  Table 2.4.6U. Real Personal Consumption Expenditures by Type of Product, Chained Dollars.csv  Table 2.8.7. Percent Change From Preceding Period in Prices for Personal Consumption Expenditures by Major Type of Product, Monthly.csv  cleaned_data.csv  cleaned_file.csv  iris_utf8.csv
Datasets/csv-files/Personal Consumption Expenditures Price Index/: Table 5.csv
Datasets/csv-files/cleaned/: organization-100.csv_cleaned.csv
Datasets/excel-files/: Personal Consumption Expenditures Price Index.xlsx
Documentation/: data-odyssey.typ  my-learning-journey.typ  test.typ
Documentation/References/: refs.bib
src/: arrow_converter.rs  data_analysis.rs  data_cleaning.rs  data_validation.rs  error_handler.rs  lib.rs  main.rs  read_csv.rs
